Bug 426240 - white on white printing
Summary: white on white printing
Status: RESOLVED FIXED
Alias: None
Product: kdiagram
Classification: Applications
Component: KGantt (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Dag Andersen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-06 11:27 UTC by testdroid711
Modified: 2020-10-07 17:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7.89
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description testdroid711 2020-09-06 11:27:25 UTC
SUMMARY

When printing gantt chart, the output is white on white text, if my system theme is dark mode


STEPS TO REPRODUCE
1. Open gantt tab
2. Print to pdf
3. 

OBSERVED RESULT

White on white text unreadable

EXPECTED RESULT

Black on white text or follow system theme, white on black?


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

Using fedora 32

ADDITIONAL INFORMATION
Comment 1 Ömer Fadıl USTA 2020-10-07 17:00:48 UTC
Git commit 919da01644fe3c65c20cb7bdd58a2118f246e0c7 by Ömer Fadıl Usta, on behalf of Dag Andersen.
Committed on 07/10/2020 at 17:00.
Pushed by usta into branch '2.7'.

KGantt: Make KGantt adapt to palette changes to make it usable also with dark themes

Colors/brushes for text, grid, constraints etc is fetched from the app palette
instead of being hardcoded.
Task, event and summary task colors are not changed
as they work with both dark and light colors.

This makes it possible print on white paper even when using a dark style
as demonstrated with the GanttPalette example.


(cherry picked from commit 60d967eec3cec695552a5cd643620bdc1c20c643)

M  +1    -0    examples/Gantt/CMakeLists.txt
A  +9    -0    examples/Gantt/palette/CMakeLists.txt
A  +59   -0    examples/Gantt/palette/main.cpp     [License: GPL (v2+)]
A  +431  -0    examples/Gantt/palette/mainwindow.cpp     [License: GPL (v2+)]
A  +74   -0    examples/Gantt/palette/mainwindow.h     [License: GPL (v2+)]
A  +360  -0    examples/Gantt/palette/projectmodel.cpp     [License: GPL (v2+)]
A  +56   -0    examples/Gantt/palette/projectmodel.h     [License: GPL (v2+)]
M  +8    -1    src/KGantt/kganttconstraintgraphicsitem.cpp
M  +3    -0    src/KGantt/kganttdatetimegrid.cpp
M  +7    -0    src/KGantt/kganttgraphicsitem.cpp
M  +9    -6    src/KGantt/kganttitemdelegate.cpp
M  +1    -1    src/KGantt/kganttitemdelegate_p.h

https://invent.kde.org/graphics/kdiagram/commit/919da01644fe3c65c20cb7bdd58a2118f246e0c7